--- a/public/index.css
+++ b/public/index.css
@@ -2,10 +2,37 @@ body {
     background-color: rgb(33, 25, 47);
 }
 
-p {
+#titlecard {
+    background-color: rgba(94, 51, 116, 0.164);
+    padding: 5vw;
+    margin: 5vw;
+    margin-left: 20vw;
+    margin-right: 20vw;
+    border-radius: 8%;
+}
+
+#profilepicture {
+    width: 20vw;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: solid;
+    border-radius: 10%;
+    border-color: rgb(227, 41, 221);
+    border-width: 1vw;
+}
+
+.bigtext {
     color: rgb(193, 92, 236);
     font-family: Helvetica, sans-serif;
     font-style: bold;
-    font-size: 10vw;
     text-align: center;
+}
+
+h1.bigtext {
+    font-size: 8vw;
+}
+
+h3.bigtext {
+    font-size: 4vw;
 }
