--- a/public/index.css
+++ b/public/index.css
@@ -1,25 +1,30 @@
+:root {
+    --desired-size: min(1vw, 7.5px);
+}
+
 body {
     background-color: rgb(33, 25, 47);
 }
 
-#titlecard {
-    background-color: rgba(94, 51, 116, 0.164);
-    padding: 5vw;
-    margin: 5vw;
-    margin-left: 20vw;
-    margin-right: 20vw;
+.card {
+    background-color: rgba(97, 54, 118, 0.164);
+    padding: calc(var(--desired-size) * 5);
+    width: calc(var(--desired-size) * 50);
+    margin: calc(var(--desired-size) * 5);
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 8%;
 }
 
 #profilepicture {
-    width: 20vw;
+    width: calc(var(--desired-size) * 20);
     margin-left: auto;
     margin-right: auto;
     display: block;
     border: solid;
     border-radius: 10%;
     border-color: rgb(227, 41, 221);
-    border-width: 1vw;
+    border-width: calc(var(--desired-size) * 1);
 }
 
 .bigtext {
@@ -29,10 +34,39 @@ body {
     text-align: center;
 }
 
+#buttons {
+    text-align: center;
+    font-size: large;
+    font-family: Helvetica, sans-serif;
+}
+
+.bigbutton {
+    padding: 1em;
+    width: 100%;
+    border-radius: calc(var(--desired-size) * 2);
+    border: none;
+    background-image: linear-gradient(to right, rgb(193, 92, 236), rgb(227, 41, 221));
+    color: rgb(247, 217, 249);
+    font-size: calc(var(--desired-size) * 4);
+    font-weight: bolder;
+}
+
+.bigbutton:hover {
+    background-image: linear-gradient(to right, rgb(162, 41, 227), rgb(142, 92, 236));
+}
+
+.bigbutton:active {
+    background-image: linear-gradient(to right, rgb(91, 41, 227), rgb(92, 176, 236));
+}
+
+#contact {
+    margin-bottom: calc(var(--desired-size) * 2);
+}
+
 h1.bigtext {
-    font-size: 8vw;
+    font-size: calc(var(--desired-size) * 8);
 }
 
 h3.bigtext {
-    font-size: 4vw;
+    font-size: calc(var(--desired-size) * 4);
 }
