--- a/public/index.css
+++ b/public/index.css
@@ -25,6 +25,7 @@ body {
     border-radius: 10%;
     border-color: rgb(227, 41, 221);
     border-width: calc(var(--desired-size) * 1);
+    background-color: rgb(114, 70, 110);
 }
 
 .bigtext {
@@ -52,36 +53,54 @@ body {
 }
 
 #links {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    row-gap: 0.5em;
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr;
+    gap: 0.5em;
 }
 
-.linkbutton {
-    padding: 0.3em;
-    border-radius: calc(var(--desired-size) * 2);
-    border: none;
-    background-image: linear-gradient(to right, rgb(193, 92, 236), rgb(227, 41, 221));
-    color: rgb(247, 217, 249);
-    font-size: calc(var(--desired-size) * 4);
-    font-weight: bolder;
-    /* center the icon */
+.linkbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.round-button {
+    width: calc(var(--desired-size) * 20);
+    height: calc(var(--desired-size) * 20);
+    border-radius: 50%;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.buttonicon {
-    width: 2em;
+#itch-button {
+    background-image: linear-gradient(30deg, rgb(234, 54, 138), rgb(224, 59, 22));
 }
 
-.bigbutton:hover, .linkbutton:hover {
+#discord-button {
+    background-image: linear-gradient(45deg, rgb(114, 143, 196), rgb(141, 65, 207));
+}
+
+#bluesky-button {
+    background-image: linear-gradient(160deg, rgb(77, 65, 213), rgb(65, 183, 207));
+}
+
+#tumblr-button {
+    background-image: linear-gradient(80deg, rgb(93, 70, 105), rgb(50, 26, 105));
+}
+
+.link-icon {
+    width: 65%;
+    fill: rgb(247, 217, 249);
+}
+
+.bigbutton:hover {
     background-image: linear-gradient(to right, rgb(162, 41, 227), rgb(142, 92, 236));
 }
 
-.bigbutton:active, .linkbutton:active {
+.bigbutton:active {
     background-image: linear-gradient(to right, rgb(91, 41, 227), rgb(92, 176, 236));
 }
 
@@ -95,4 +114,14 @@ h1.bigtext {
 
 h3.bigtext {
     font-size: calc(var(--desired-size) * 4);
+    margin: calc(var(--desired-size) * 1) 0;
+}
+
+h4 {
+    font-size: calc(var(--desired-size) * 3);
+    margin: calc(var(--desired-size) * 1) 0;
+    color: rgb(138, 129, 142);
+    font-family: Helvetica, sans-serif;
+    font-weight: 400;
+    text-align: center;
 }
