--- a/public/index.css
+++ b/public/index.css
@@ -76,11 +76,11 @@ body {
 }
 
 #itch-button {
-    background-image: linear-gradient(30deg, rgb(234, 54, 138), rgb(224, 59, 22));
+    background-image: linear-gradient(30deg, rgb(238, 32, 128), #fa5c5c);
 }
 
 #discord-button {
-    background-image: linear-gradient(45deg, rgb(114, 143, 196), rgb(141, 65, 207));
+    background-image: linear-gradient(45deg, #5865F2, rgb(141, 65, 207));
 }
 
 #bluesky-button {
@@ -94,6 +94,14 @@ body {
 .link-icon {
     width: 65%;
     fill: rgb(247, 217, 249);
+}
+
+#tumblr-icon {
+    transform: scale(0.93);
+}
+
+#bsky-icon {
+    transform: scale(0.94) translate(0, 4%);
 }
 
 .bigbutton:hover {
