--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 1px solid rgb(0, 255, 217);
+    /* useful for seeing borders of elements for testing */
+    /* note that it will offset sizes by a few pixels */
+    /* border: 1px solid rgb(0, 255, 217); */
 }
 
 body {
@@ -19,18 +21,26 @@ img {
 
 .card {
     background-color: rgba(97, 54, 118, 0.164);
-    width: min(90%, 400px);
-    padding: 20px;
-    margin: 15px;
+    width: 100%;
+    /* width: min(90%, 30rem); */
+    padding: 1rem;
+    /* margin: 15px; */
+    margin: 0;
+    border-top: 2px solid rgb(63, 45, 73);
     margin-left: auto;
     margin-right: auto;
-    border-radius: 40px;
+    /* border-radius: 40px; */
+    border-radius: 0;
+}
+
+/* the top card should not have a border */
+#titlecard {
+    border: none;
 }
 
 #profilepicture {
     width: 40%;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 1rem auto;
     display: block;
     border: solid;
     border-radius: 20px;
@@ -46,6 +56,18 @@ img {
     text-align: center;
 }
 
+h1.bigtext {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+h3.bigtext {
+    font-size: 2rem;
+    font-weight: 500;
+    margin: 0 0;
+}
+
 #doeball-emoji {
     width: 1em;
     padding-left: 0.1em;
@@ -57,6 +79,7 @@ img {
     text-align: center;
     font-size: large;
     font-family: Helvetica, sans-serif;
+    background-color: #261f30;
 }
 
 .bigbutton {
@@ -66,18 +89,19 @@ img {
     border: none;
     background-image: linear-gradient(to right, rgb(193, 92, 236), rgb(227, 41, 221));
     color: rgb(247, 217, 249);
-    font-size: 16pt;
+    font-size: 1.3rem;
     font-weight: bolder;
 }
 
 #contact {
+    /* gap between the buttons */
     margin-bottom: 15px;
 }
 
 #links {
     display: grid;
     grid-template: 1fr 1fr / 1fr 1fr;
-    gap: 0.5em;
+    gap: 1.5em 0;
 }
 
 .linkbox {
@@ -88,13 +112,14 @@ img {
 }
 
 .round-button {
-    width: 120px;
-    height: 120px;
+    width: 7rem;
+    height: 7rem;
     border-radius: 50%;
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0.3rem;
 }
 
 #itch-button {
@@ -134,21 +159,12 @@ img {
     background-image: linear-gradient(to right, rgb(91, 41, 227), rgb(92, 176, 236));
 }
 
-h1.bigtext {
-    font-size: 65px;
-}
-
-h3.bigtext {
-    font-size: 40px;
-    margin: 0 0;
-}
-
 h4 {
-    font-size: calc(var(--desired-size) * 3);
-    margin: calc(var(--desired-size) * 1) 0;
+    font-size: 1.1rem;
+    margin: 0.2rem;
     color: rgb(138, 129, 142);
     font-family: Helvetica, sans-serif;
-    font-weight: 400;
+    font-weight: 100;
     text-align: center;
 }
 
