--- a/public/index.css
+++ b/public/index.css
@@ -18,6 +18,7 @@ body {
     flex-direction: column;
     gap: 0;
     align-items: center;
+    overflow-x: hidden;
 }
 
 img {
@@ -35,6 +36,11 @@ img {
     margin: 0;
     border-top: 2px solid rgb(63, 45, 73);
     border-radius: 0;
+}
+
+.card,
+main {
+    transition: all 350ms, height 350ms ease-in-out;
 }
 
 /* title card */
@@ -56,6 +62,7 @@ img {
     cursor: pointer;
     position: relative;
     z-index: 1;
+    box-shadow: 0 0 16px rgba(227, 41, 221, 0.366);
 }
 
 #profilepicture:hover {
@@ -127,10 +134,11 @@ img {
     text-align: center;
 }
 
-h1.bigtext {
+h1.bigtext#title {
     font-size: calc(var(--text-size) * 3);
     margin-bottom: 1rem;
     font-weight: 700;
+    text-shadow: 0 0 5px rgba(193, 92, 236, 0.298);
 }
 
 h3.bigtext {
@@ -139,49 +147,106 @@ h3.bigtext {
     margin: 0 0;
 }
 
-#doeball-emoji {
+#doeball-emoji,
+.emote {
     width: 1em;
     padding-left: 0.1em;
     display: inline;
     transform: translate(0, 0.1em);
 }
 
+.emote {
+    width: 1.6em;
+    transform: translate(0, -0.1em);
+    position: absolute;
+}
+
 /* buttons card */
 
-#buttons, #contact {
+main {
+    width: 100%;
+    position: relative;
+}
+
+button {
+    text-shadow: 0 0 5px rgba(24, 10, 69, 0.451);
+}
+
+a.email {
+    color: rgb(193, 92, 236);
+    text-shadow: 0 0 5px rgba(193, 92, 236, 0.411)
+}
+
+#buttons,
+#contact,
+#comms {
     text-align: center;
     font-size: large;
     font-family: Helvetica, sans-serif;
     background-color: rgba(70, 38, 86, 0.164);
-    animation: 350ms forwards;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    position: absolute;
+    margin: 0;
 }
 
-.reverse-animation {
-    animation-direction: reverse;
+#contact {
+    transform: translateX(-100vw)
 }
 
-.slide-right {
-    animation-name: slide !important;
-    --slide-distance: 100vw;
+p {
+    line-height: 1.35em;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
-.slide-left {
-    animation-name: slide !important;
-    --slide-distance: -100vw;
+#comms {
+    transform: translateX(100vw)
 }
 
-@keyframes slide {
-    0% {
-        transform: translate(0, 0);
-        position: static;
-    }
+.example-art {
+    transition: all 450ms;
+    transform-origin: 50% 50%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center center;
+    box-shadow: 3px 3px 15px rgb(23, 0, 44);
+    background-size: var(--zoom);
+}
 
-    100% {
-        transform: translate(var(--slide-distance), 0);
-        height: 0;
-        position: fixed;
-        left: var(--slide-distance);
-    }
+.example-art:hover {
+    transform: scale(1.05, 1.05);
+    background-size: calc(var(--zoom) * 1.1);
+    box-shadow: 6px 6px 20px rgb(18, 11, 26);
+}
+
+#headshot {
+    width: 40%;
+    height: 0;
+    padding-bottom: 40%;
+    /* i hate this language */
+    background-image: url("bloo_headshot.png");
+    --zoom: 110%;
+}
+
+#halfbody {
+    width: 80%;
+    height: 0;
+    padding-bottom: 80%;
+    background-image: url("andromeda_half.png");
+    --zoom: 135%;
+}
+
+#fullbody {
+    width: 95%;
+    height: 0;
+    padding-bottom: 95%;
+    background-image: url("verity_with_9_trillion_effects.png");
+    --zoom: 120%;
 }
 
 .bigbutton {
@@ -196,6 +261,9 @@ h3.bigtext {
     transition: all 280ms;
     background-size: 300%;
     background-position: 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .bigbutton:hover {
@@ -206,15 +274,29 @@ h3.bigtext {
 
 .bigbutton:active {
     background-position: 100% 0;
+    transform: translateY(2px) scale(0.98);
 }
 
-#contact-button {
-    /* gap between the buttons */
-    margin-bottom: 15px;
+#palette-icon {
+    width: 1.5em;
+    filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+}
+
+#envelope-icon {
+    width: 1.5em;
+    filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+}
+
+.back {
+    width: 1.5em;
+    filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+}
+
+#contact-back {
+    transform: scale(-1, 1);
 }
 
 /* round buttons with links */
-
 #links {
     display: grid;
     justify-content: center;
@@ -283,7 +365,7 @@ h3.bigtext {
     transform: scale(0.94) translate(0, 4%);
 }
 
-h4 {
+p {
     font-size: calc(var(--text-size) * 1.1);
     margin: 0.2rem;
     color: rgb(172, 160, 177);
@@ -312,9 +394,10 @@ h4 {
         --text-size: 1rem;
     }
 
-    .card {
-        width: min(90%, 25rem);
+    .card,
+    main {
         margin: 0 0 1rem 0;
+        width: min(90%, 25rem);
         border-radius: 20px;
         border-top: none;
     }
@@ -339,7 +422,8 @@ h4 {
         --text-size: 1.2rem;
     }
 
-    .card {
+    .card,
+    main {
         width: min(90%, 32rem);
     }
 }
