--- a/public/index.css
+++ b/public/index.css
@@ -13,12 +13,11 @@
 }
 
 body {
-    background-color: rgb(33, 25, 47);
+    background-color: rgb(25, 20, 44);
     display: flex;
     flex-direction: column;
     gap: 0;
     align-items: center;
-    overflow-x: hidden;
 }
 
 img {
@@ -385,6 +384,21 @@ p {
 #footer:hover {
     text-decoration: underline;
     color: rgba(171, 159, 177, 0.514);
+}
+
+#glow {
+    position: fixed;
+    /* background image must be larger than the body so that it can move past it */
+    width: 200vw;
+    height: 200vh;
+    background-image: radial-gradient(circle, rgb(33, 25, 47) 5%, transparent 30%);
+    z-index: -1;
+}
+
+/* removed by js to let the user move the background */
+.topleft {
+    top: -50vh;
+    left: -50vw;
 }
 
 /* for square-ish screens */
