--- a/public/index.css
+++ b/public/index.css
@@ -284,11 +284,18 @@ p {
 #palette-icon {
     width: 1.5em;
     filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+    transform: translateX(0.12em);
 }
 
 #envelope-icon {
     width: 1.5em;
     filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+}
+
+#gallery-icon {
+    width: 1.3em;
+    filter: drop-shadow(0 0 5px rgba(24, 10, 69, 0.451));
+    transform: translateX(-0.12em);
 }
 
 .back {
