--- a/public/index.css
+++ b/public/index.css
@@ -13,6 +13,7 @@
 }
 
 body {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(25, 20, 44);
     /* edit with js */
     --glow-x: 50%;
@@ -102,7 +103,6 @@ main {
 
 #boop-counter {
     text-align: center;
-    font-family: Helvetica, sans-serif;
     font-size: calc(var(--text-size) * 0.8);
     color: rgba(138, 129, 142, 0.424);
     text-decoration: none;
@@ -132,7 +132,6 @@ main {
 
 .bigtext {
     color: rgb(193, 92, 236);
-    font-family: "Helvetica", sans-serif;
     font-style: bold;
     text-align: center;
 }
@@ -183,7 +182,6 @@ a.email {
 .sliding-card {
     text-align: center;
     font-size: large;
-    font-family: Helvetica, sans-serif;
     background-color: rgba(70, 38, 86, 0.164);
     width: 100%;
     display: flex;
@@ -230,7 +228,7 @@ p {
     height: 0;
     padding-bottom: 40%;
     /* i hate this language */
-    background-image: url("bloo_headshot.png");
+    background-image: url("assets/bloo_headshot.png");
     --zoom: 110%;
 }
 
@@ -238,7 +236,7 @@ p {
     width: 80%;
     height: 0;
     padding-bottom: 80%;
-    background-image: url("andromeda_half.png");
+    background-image: url("assets/andromeda_half.png");
     --zoom: 135%;
 }
 
@@ -246,7 +244,7 @@ p {
     width: 95%;
     height: 0;
     padding-bottom: 95%;
-    background-image: url("verity_with_9_trillion_effects.png");
+    background-image: url("assets/verity_with_9_trillion_effects.png");
     --zoom: 120%;
 }
 
@@ -377,13 +375,11 @@ p {
     font-size: calc(var(--text-size) * 1.1);
     margin: 0.2rem;
     color: rgb(172, 160, 177);
-    font-family: Helvetica, sans-serif;
     font-weight: 100;
     text-align: center;
 }
 
 #footer {
-    font-family: Helvetica, sans-serif;
     font-size: calc(var(--text-size) * 0.8);
     color: rgba(138, 129, 142, 0.314);
     margin-bottom: 1rem;
@@ -427,7 +423,7 @@ p {
         margin-top: 1rem;
     }
 
-    #buttons {
+    .sliding-card {
         background-color: rgba(97, 54, 118, 0.164);
     }
 
