--- a/public/minecraft.css
+++ b/public/minecraft.css
@@ -15,18 +15,95 @@ img {
 }
 
 body {
+    min-height: 100vh;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    justify-content: center;
-    gap: 1rem;
+    gap: 0.5em;
     font-family: Helvetica, sans-serif;
-}
-
-h1, p {
     font-style: bold;
     text-align: center;
-    color: rgb(193, 92, 236);
+    color: rgb(224, 216, 231);
+}
+
+body::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-image: url("assets/minecraft/sunsetblur.png");
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+    filter: brightness(0.7);
+    z-index: -1;
+}
+
+nav {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    height: calc(var(--font-size) * 2.9);
+    width: 100%;
+    background-color: rgba(34, 30, 37, 0.409);
+    padding: 0.3em;
+    gap: 0.3em;
+}
+
+.navbuttons {
+    height: 100%;
+}
+
+nav .navbuttons {
+    display: flex;
+    gap: 0.3em;
+}
+
+#header-pfp {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+}
+
+#header-pfp img {
+    height: 100%;
+    width: auto;
+}
+
+button,
+input[type="submit"],
+input[type="reset"] {
+    background: none;
+    color: inherit;
+    border: none;
+    padding: 0;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    height: 100%;
+    background-color: rgba(34, 30, 37, 0.828);
+    padding: 0.3em;
+}
+
+.card {
+    background-color: rgba(34, 30, 37, 0.409);
+    padding: 0.5em;
+    width: calc(100% - 1em);
+    animation: fade-in 800ms ease-out;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0.65;
+        transform: translate(0, -2rem);
+    }
+
+    100% {
+        opacity: 1;
+        transform: none;
+    }
 }
 
 p {
@@ -35,11 +112,4 @@ p {
 
 h1 {
     font-size: calc(var(--font-size) * 1.5);
-}
-
-#pfp {
-    width: 20rem;
-    border: 1px solid rgb(193, 92, 236);
-    background-color: rgb(88, 61, 102);
-    border-radius: 5px;
 }
