--- a/public/gallery.css
+++ b/public/gallery.css
@@ -4,51 +4,63 @@
     padding: 0;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 :root {
-    --text-light: rgb(231, 181, 248);
+    --text-light: rgb(225, 151, 250);
+    --text-dark: rgb(124, 113, 169);
+    --font-size: 0.8rem;
+    --border-radius: 4px;
 }
 
 body {
+    font-size: var(--font-size);
     min-height: 100vh;
-    text-align: center;
     font-family: Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-main {
-    margin-top: 1rem;
-    width: 90vw;
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: 1fr;
-    align-items: center;
-}
-
-h1 {
-    margin: 1rem;
-}
-
-h1, h2, h3, p {
+h1,
+h2,
+h3,
+p {
     color: var(--text-light);
 }
 
+#title {
+    margin-top: 1rem;
+}
+
+#gallery {
+    margin: 1rem 0;
+    padding: 0 1rem;
+    display: grid;
+    grid-template-columns: minmax(0, 1fr);
+    width: 100%;
+    gap: 0.5rem;
+}
+
 .artwork-card {
+    border: 1px solid rgba(231, 181, 248, 0.534);
+    border-radius: var(--border-radius);
+    background-color: rgba(182, 137, 214, 0.098);
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0.5rem;
     justify-content: space-between;
-    gap: 0.5rem;
-    padding: 1rem;
-    border: 1px solid rgba(231, 181, 248, 0.534);
-    border-radius: 5px;
-    background-color: rgba(182, 137, 214, 0.098);
-    height: 100%;
+    gap: 0.5rem
 }
 
-.artwork-card img {
-    width: 100%;
+.artwork-card h2 {
+    word-break: break-word;
 }
 
 .artwork-card .desc {
@@ -58,15 +70,48 @@ h1, h2, h3, p {
     gap: 0.5rem;
 }
 
+.artwork-card .image-container {
+    overflow: hidden;
+}
+
+.artwork-card .image-container img,
+.artwork-card .image-container {
+    transition: 300ms;
+}
+
+.artwork-card .image-container:hover {
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 5px 1px rgba(19, 5, 29, 0.696);
+}
+
+.artwork-card .image-container:hover img {
+    transform: scale(1.1);
+}
+
+.desc .tags {
+    font-style: italic;
+    color: var(--text-dark);
+}
+
 @media screen and (min-width: 600px) {
-    main {
-        grid-template-columns: 1fr 1fr;
+    :root {
+        --font-size: 1rem;
+        --border-radius: 5px;
+    }
+
+    #gallery {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+        gap: 1rem;
     }
 }
 
 @media screen and (min-width: 850px) {
-    main {
-        grid-template-columns: 1fr 1fr 1fr;
+    :root {
+        --border-radius: 6px;
+    }
+
+    #gallery {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
         max-width: 1150px;
     }
 }
