--- a/public/gallery.css
+++ b/public/gallery.css
@@ -89,6 +89,25 @@ p {
     color: var(--text-dark);
 }
 
+.desc .mongo-id {
+    font-weight: bolder;
+    font-size: calc(var(--font-size) * 1);
+    word-break: break-word;
+    line-height: 0.8em;
+    transform-origin: top middle;
+    transition: 450ms;
+    opacity: 0;
+    position: relative;
+    bottom: 2em;
+    transform: scaleY(0);
+}
+
+:is(.artwork-card:focus-within, .artwork-card:hover) .mongo-id {
+    opacity: 0.1;
+    bottom: 0;
+    transform: scaleY(1);
+}
+
 .desc a,
 #clear-search {
     color: inherit;
