--- a/public/gallery.css
+++ b/public/gallery.css
@@ -69,6 +69,7 @@ p {
 
 .artwork-card .image-container {
     overflow: hidden;
+    cursor: pointer;
 }
 
 .artwork-card .image-container img,
@@ -110,7 +111,8 @@ p {
 }
 
 .desc a,
-#clear-search {
+#clear-search,
+#enlarged-image-link {
     color: inherit;
     filter: saturate(2) contrast(2);
 }
@@ -118,7 +120,9 @@ p {
 .desc a:hover,
 .desc a:focus-within,
 #clear-search:hover,
-#clear-search:focus-within {
+#clear-search:focus-within,
+#enlarged-image-link:hover,
+#enlarged-image-link:focus-within {
     filter: saturate(5) contrast(5);
 }
 
@@ -195,6 +199,96 @@ nav #title-area #title {
 
 .artwork-card:has(.tall-image) {
     grid-row: span 2;
+}
+
+#image-view {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    background-color: rgba(22, 9, 22, 0.654);
+    z-index: 1;
+    display: grid;
+    place-items: center;
+    animation: 250ms linear forwards;
+    pointer-events: none;
+    opacity: 0;
+}
+
+@keyframes fade-in {
+    0% {
+        pointer-events: none;
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        pointer-events: all;
+    }
+}
+
+@keyframes fade-out {
+    0% {
+        opacity: 1;
+        pointer-events: all;
+    }
+    100% {
+        pointer-events: none;
+        opacity: 0;
+    }
+}
+
+#image-view #enlarged-image-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.5em;
+    max-width: 90vw;
+    max-height: 90vh;
+    animation: 300ms ease-out forwards;
+}
+
+#image-view #enlarged-image-container #enlarged-image {
+    max-height: 90vh;
+}
+
+@keyframes enlarge {
+    0% {
+        transform: scale(0);
+    }
+    60% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+/* stupid hack */
+@keyframes shrink {
+    0% {
+        transform: scale(1);
+    }
+    40% {
+        transform: scale(1.05);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+#image-view #enlarged-image {
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: var(--border-radius);
+    box-shadow: 0 0 35px 5px rgba(19, 5, 29, 0.696);
+    cursor: pointer;
+}
+
+#image-view #enlarged-image-link {
+    color: var(--text-light)
 }
 
 @media screen and (min-width: 600px) {
