--- a/public/index.css
+++ b/public/index.css
@@ -188,6 +188,13 @@ a.email {
     text-shadow: 0 0 5px rgba(193, 92, 236, 0.411)
 }
 
+#radio iframe {
+    width: 100%;
+    height: 105px;
+    min-width: 0;
+    border: 0;
+}
+
 .sliding-card {
     text-align: center;
     font-size: large;
@@ -208,11 +215,13 @@ p {
     padding-right: 0.5rem;
 }
 
-#contact, #gallery {
+#contact,
+#gallery {
     --offscreen-position: -100vw;
 }
 
-#comms, #games {
+#comms,
+#games {
     --offscreen-position: 100vw;
 }
 
